fix:word wrap

--- a/src/Components/TasksCompleted.css
+++ b/src/Components/TasksCompleted.css
@@ -31,7 +31,7 @@
   padding: 10px;
   border: 3px solid #000000ad;
   border-radius: 10px;
-  overflow-wrap: break-word;
+  word-break: break-all;
   line-height: 1.5;
   font-family: "Roboto Slab", serif;
   overflow: scroll;
